force-app/main/default/objects/TT_Session_Log__c/TT_Session_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks each coaching session — office hours, campfire sessions, and private coaching. Coaches log sessions here after they occur. Powers the Session Log page in Trail OS which is currently a stub waiting for this object.</description>
    <label>Session Log</label>
    <nameField>
        <displayFormat>SL-{000}</displayFormat>
        <label>Session Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>