force-app/main/default/objects/TT_Session_Log__c/fields/At_Risk_Flags__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Flags__c</fullName>
    <description>Learners flagged as at-risk during this session. Penny reads this field.</description>
    <inlineHelpText>Learners flagged as at-risk during this session. Penny reads this field.</inlineHelpText>
    <label>At Risk Flags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>