force-app/main/default/objects/TT_Session_Log__c/fields/Attendee_Count__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Count__c</fullName>
    <description>How many learners attended. Not required for private sessions.</description>
    <inlineHelpText>How many learners attended. Not required for private sessions.</inlineHelpText>
    <label>Attendee Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>