force-app/main/default/objects/TT_Session_Log__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>Session length in minutes</description>
    <inlineHelpText>Session length in minutes</inlineHelpText>
    <label>Duration Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>