force-app/main/default/objects/TT_Session_Log__c/fields/Penny_Context__c.field-meta.xml
<CustomField>
    <fullName>Penny_Context__c</fullName>
    <description>Context Penny uses when referencing this session in coaching conversations</description>
    <inlineHelpText>Context Penny uses when referencing this session in coaching conversations</inlineHelpText>
    <label>Penny Context</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>