force-app/main/default/objects/TT_Session_Log__c/fields/Program_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Program_Cohort__c</fullName>
    <description>The program cohort for which session is related</description>
    <formula>Program_Engagement__r.pmdm__ProgramCohort__r.Name</formula>
    <inlineHelpText>The program cohort for which session is related</inlineHelpText>
    <label>Program Cohort</label>
    <type>Text</type>
</CustomField>