force-app/main/default/objects/TT_Session_Log__c/fields/Program_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Program_Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The program for which session is related</description>
    <inlineHelpText>The program for which session is related</inlineHelpText>
    <label>Program Engagement</label>
    <referenceTo>pmdm__ProgramEngagement__c</referenceTo>
    <relationshipLabel>Session Logs</relationshipLabel>
    <relationshipName>Session_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>