force-app/main/default/objects/TT_Session_Log__c/fields/Session_Coach__c.field-meta.xml
<CustomField>
    <fullName>Session_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Filter to Contact records with RecordType = Coach</description>
    <inlineHelpText>Filter to Contact records with RecordType = Coach</inlineHelpText>
    <label>Session Coach</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Coach</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Session Logs</relationshipLabel>
    <relationshipName>Session_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>