force-app/main/default/objects/TT_Session_Log__c/fields/Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Session_Date__c</fullName>
    <description>Date the session occurred</description>
    <inlineHelpText>Date the session occurred</inlineHelpText>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>