force-app/main/default/objects/TT_Session_Log__c/fields/Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Session_Notes__c</fullName>
    <description>Qualitative notes from the coach about what was covered</description>
    <inlineHelpText>Qualitative notes from the coach about what was covered</inlineHelpText>
    <label>Session Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>