force-app/main/default/objects/TT_Session_Log__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Hours</fullName>
            </value>
            <value>
                <fullName>Campfire Session</fullName>
            </value>
            <value>
                <fullName>Private Coaching</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>